[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/UI/Selector.png" type="Texture" id=1]
[ext_resource path="res://Animations/Player/run.tres" type="Animation" id=2]
[ext_resource path="res://Assets/Objects/Boulder.png" type="Texture" id=4]
[ext_resource path="res://Animations/Player/idle.tres" type="Animation" id=5]
[ext_resource path="res://Animations/Player/StartingGame.tres" type="Animation" id=6]
[ext_resource path="res://Fonts/normalText.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/BoldText.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/DSKnight/idle/tile004.png" type="Texture" id=38]
[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=40]
[ext_resource path="res://Assets/Player/LanternLightTexture.png" type="Texture" id=41]
[ext_resource path="res://Assets/tilemap/Wasteland Tileset/WastelandGround.png" type="Texture" id=42]
[ext_resource path="res://Materials/LightCanvasMaterial.tres" type="Material" id=43]
[ext_resource path="res://Scripts/MovingBackground.gd" type="Script" id=44]

[sub_resource type="TileSet" id=9]
0/name = "WastelandGround.png 0"
0/texture = ExtResource( 42 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="StartMenu" type="Node2D"]
script = ExtResource( 40 )

[node name="GameTitle" type="Label" parent="."]
margin_left = 537.251
margin_top = 110.769
margin_right = 692.252
margin_bottom = 127.769
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 8 )
text = "Untitled Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_left = 751.324
margin_top = 257.418
margin_right = 857.324
margin_bottom = 397.418
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelection" type="VBoxContainer" parent="Menu"]
margin_right = 16.0
margin_bottom = 140.0
custom_constants/separation = 15

[node name="playSelected" type="TextureRect" parent="Menu/PlayerSelection"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="optionSelected" type="TextureRect" parent="Menu/PlayerSelection"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 31.0
margin_right = 16.0
margin_bottom = 47.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
stretch_mode = 1

[node name="aboutSelected" type="TextureRect" parent="Menu/PlayerSelection"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 62.0
margin_right = 16.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_left = 20.0
margin_right = 106.0
margin_bottom = 140.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="LinkButton" parent="Menu/Buttons"]
margin_right = 86.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
shortcut_in_tooltip = false
text = "Play"

[node name="Options" type="LinkButton" parent="Menu/Buttons"]
margin_top = 32.0
margin_right = 86.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 8 )
shortcut_in_tooltip = false
text = "Options"

[node name="About" type="LinkButton" parent="Menu/Buttons"]
margin_top = 64.0
margin_right = 86.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 8 )
shortcut_in_tooltip = false
text = "About"

[node name="AboutScrollBar" type="ScrollContainer" parent="."]
margin_left = 580.0
margin_top = 197.0
margin_right = 1012.0
margin_bottom = 584.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutText" type="RichTextLabel" parent="AboutScrollBar"]
visible = false
margin_right = 432.0
margin_bottom = 387.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 7 )
text = "Testing 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovingBackground" type="Node2D" parent="."]
position = Vector2( -197, 602 )
scale = Vector2( 10, 10 )
script = ExtResource( 44 )

[node name="Ground" type="TileMap" parent="MovingBackground"]
material = ExtResource( 43 )
scale = Vector2( 1, 1 )
tile_set = SubResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0 )

[node name="Tween" type="Tween" parent="MovingBackground/Ground"]

[node name="CharacterSprite" type="Sprite" parent="MovingBackground"]
material = ExtResource( 43 )
position = Vector2( 32.701, -14.7797 )
scale = Vector2( 0.463432, 0.463432 )
texture = ExtResource( 38 )

[node name="PlayerAnimation" type="AnimationPlayer" parent="MovingBackground"]
method_call_mode = 1
anims/idle = ExtResource( 5 )
anims/run = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="MovingBackground"]
material = ExtResource( 43 )
position = Vector2( 32.701, -14.7797 )
scale = Vector2( 4.71584, 5.24684 )
texture = ExtResource( 41 )
range_height = 264.3
shadow_enabled = true
shadow_item_cull_mask = 513

[node name="Boulder" type="Sprite" parent="MovingBackground"]
light_mask = 0
position = Vector2( 106.852, -75.3395 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )

[node name="BumperAnimation" type="AnimationPlayer" parent="MovingBackground"]
anims/StartingGame = ExtResource( 6 )

[node name="CharacterSpeach" type="Label" parent="MovingBackground"]
margin_left = 37.6952
margin_top = -27.2369
margin_right = 117.695
margin_bottom = -10.2369
rect_rotation = -11.3
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 7 )
percent_visible = -0.166667
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="playPressed" from="." to="MovingBackground" method="_on_StartMenu_playPressed"]
[connection signal="pressed" from="Menu/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/Buttons/About" to="." method="_on_About_pressed"]
[connection signal="tween_all_completed" from="MovingBackground/Ground/Tween" to="MovingBackground" method="_on_Tween_tween_all_completed"]
[connection signal="animation_started" from="MovingBackground/PlayerAnimation" to="MovingBackground" method="_on_PlayerAnimation_animation_started"]
[connection signal="animation_finished" from="MovingBackground/BumperAnimation" to="." method="_on_BumperAnimation_animation_finished"]
